--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,7 +59,7 @@ spring:
   profiles:
     active: ${CLIENT_PROFILE:prod}
   main:
-    web-environment: false
+    web-application-type: none
   application:
     name: Downlord's FAF Client
 
