--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,7 +43,10 @@ faf-client:
   map-generator:
     repoAndOwnerName: FAForever/Neroxis-Map-Generator
     queryLatestVersionUrl: https://api.github.com/repos/${faf-client.map-generator.repoAndOwnerName}/releases/latest
+    queryVersionsUrl: https://api.github.com/repos/${faf-client.map-generator.repoAndOwnerName}/releases
     downloadUrlFormat: https://github.com/${faf-client.map-generator.repoAndOwnerName}/releases/download/%1$s/NeroxisGen_%1$s.jar
+    maxSupportedMajorVersion: 1
+    minSupportedMajorVersion: 0
 
   translation-project-url: https://poeditor.com/join/project/2oWfdaZQZj
   client-config-url: https://content.faforever.com/dfc-config.json
