Use correct replay download url (fixes #1801)

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -7,6 +7,7 @@ faf-client:
 
   vault:
     base-url: https://content.test.faforever.com
+    replay-download-url-format: https://replay.test.faforever.com/%s
 
   news:
     feed-url: https://direct.test.faforever.com/news/feed
